--- a/draft/alexpub.tex
+++ b/draft/alexpub.tex
@@ -201,7 +201,7 @@ Main reason for the unequal strain partitioning between the $\alpha_2$ and $\gam
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=1\linewidth]{img/slice-view}
-	\caption{Model of the simulation(a) and sliced view of the model with no void(b), with void inside $\alpha_2$ phase(c) with void at $\alpha_2 / \gamma$ interface(d)}
+	\caption{Model of the simulation(a) and sliced view of the model with no void(b), inside $\alpha_2$ phase(c) at $\alpha_2 / \gamma$ phase boundary(d)}
 	\label{fig:model-creation}
 \end{figure}
 
