--- a/draft/alexpub.tex
+++ b/draft/alexpub.tex
@@ -1,5 +1,5 @@
 %=================================================================
-\documentclass[Unknown,article,submit,moreauthors,pdftex,10pt,a4paper]{Definitions/mdpi} 
+\documentclass[materials,article,submit,moreauthors,pdftex,10pt,a4paper]{Definitions/mdpi} 
 \usepackage{siunitx}
 \usepackage{multirow}
 \preto{\abstractkeywords}{\nolinenumbers}
@@ -16,8 +16,8 @@
 \history{Received: date; Accepted: date; Published: date}
  
 % Full title of the paper (Capitalized)
-% \Title{Effect of Nanovoid on Fracture Process of Two-Phase $\gamma$($\rm TiAl$)+$\alpha_2$($\rm Ti_3Al$) Alloy}
-\Title{Micromechanism of  Cold Deformation of Two Phase Polycrystalline Ti-Al Alloy with void}
+
+\Title{Micromechanism of  Cold Deformation of Two Phase Polycrystalline Ti-Al Alloy with Void}
 % Author Orchid ID: enter ID or remove command
 \newcommand{\orcidauthorA}{0000-0001-8385-4439} % Add \orcidA{} behind the author's name
 \newcommand{\orcidauthorB}{0000-0002-9582-6301} % Add \orcidB{} behind the author's name
@@ -59,8 +59,12 @@ $^{2}$ \quad State Key Laboratory of Advanced Processing and Recycling of Non-fe
 \section{Introduction}
 % and brittle rapture failure 
 Titanium  aluminum based intermetallic alloys are promising high temperature structural materials because of their great corrosion resistance and strength at high temperature. Compared with nickle based alloy,  Ti-Al based alloys have lower density and are pron to be utilized in combustion engine, turbine, and other components working at high temperature from 500 \si{\degreeCelsius} to 900 \si{\degreeCelsius} \cite{Clemens2016}. The performance of inner combustion engine with components made of Ti-6Al-4V was improved  20\% because the weight of components decreased from 30\% to 40\% \cite{Bewlay2016}. With the advancement of non-ferrous metallurgy, Ti-Al based alloy components have better economic efficiency than ever before. Ti-Al based alloys have good prospects for applications in aerospace and automobile industry. 
-Poor ductility of Ti-Al alloy  at room temperature strongly affects the safety of structures like turbo of aircraft engine and combustion generator \cite{Munz2017}. Deformation phenomena of Ti-Al alloys have been widely studied in order to overcome the problems associated with the limited ductility and damage tolerance.  Much of the work has been performed on single phase $\gamma$-TiAl alloys and polysynthetically twinned crystals(PTC)\cite{Appel2016}. Rapture failure at the macroscopic scale can be attributed to abrupt nucleation, growth and propagation of cracks, but at the microscopic scale defects are initially formed in the casting process, such as voids and inclusions \cite{Tang2014}. A great number of literatures cover a wide range of factors such as alloy composition, microstructure and deformation temperature, some reports come up with the idea that two phase titanium aluminum alloys with proper phase distribution and grain size exhibit better mechanical performance compared with monolithic constituents $\gamma$(TiAl) and $\alpha_2$($\rm Ti_3Al$) alloy \cite{Kim1995}. 
-void can be arose due to specific volume differences induced by precipitation, different thermal expansion or shrinkage upon heating or cooling the specimen. It has been known that nucleation, growth and coalescence of voids are deemed as the primary mechanism of ductile material fracture, in which void growth is particularly important \cite{Hempel2017a}. The initiation of crack at microscopic scale is a dynamic process, which results in difficulties on study of  mechanisms about deformation and cracking, these defects are known playing a fundamental role in the deformation of materials. Multiscale method has been applied to study deformation behavior of polycrystal with single aluminum \cite{Groh2009} and titanium element respectively \cite{Liu2018}. It's necessary to carefully examine the revolution of defects and its influence on the fracture process at atomic scale. The effect of void is another great concern about properties and deformation mechanism  of TiAl alloy.  Therefore, it is necessary to study the deformation response of intermetallics structural materials with the consideration of microstructure evolution. Previous study on void growth in single crystal $\gamma$-TiAl reveals that void with high volume fraction detracts yield strength \cite{Tang2014, Xu2011}. Evolution of void in ductile polycrystalline was studied in nanoscale with molecular dynamics(MD) simulations, \cite{Jing2018a,Elkhateeb2018}, voids inside material are soures of dislocation and affects the properties of materials differently because of differences in size and position.  The deformation and fracture mechanisms in the duplex microstructure are plasticity induced grain boundary decohesion and cleavage, while those in the lamellar micro-structure are interface delamination and cracking across the lamellar \cite{Tang2014}. It reveals that existence of voids alone may contribute to strain hardening because they are barriers to dislocation movement in ductile fcc structure metal\cite{Xiong2015}. However, few literature covers about deformation mechanism of two phase Ti-Al alloy and the role of void in atomic scale. Defects are inevitable as micro-pores and loosen from casting, and in the actual work environment with radiation. A lot of work carried out on the  effect of various defects on the behavior of different materials, showing that point defects may affect the properties of materials greatly. The mechanical performance of irradiated copper is affected by the interaction between irradiation and dislocation \cite{Kiener2011}. Vacancy concentration in single crystal and polycrystal Fe–40 at. Al bulk results in an increase of strength \cite{Yang1998}. Ti-Al alloy is a type of typical brittle material, thus it can be assumed that its properties are sensitive to the existence of void. Surface defects such as small notches can cause low and high cycle fatigue strength of the Ti–47Al–2W–0.5Si alloy \cite{Nazmy2001}, and the strength of single crystal $\gamma$-TiAl is also lowered by point defect \cite{Wu2016}. The resistance of Ti–6Al–4V alloy, which was processed for typical fan blade applications, to high-cycle fatigue in the presence of foreign- object damage was reduced due to earlier crack initiation.  The nucleation and subsequent near-threshold growth of crack was primarily affected by the stress concentration associated with the foreign-object damage and the presence of small cracks in the damaged zone. Due to difficulties in observing the dynamic process during deformation wit experiments, MD simulation has become an effective method to investigate micro deformation mechanism. Defects such as grain boundary, void and segregation play significant roles in the process of fracture \cite{Larsen2016}. This paper focus on the evolution of microstructure, tending to find out its connection to cold deformation behavior of two phase TiAl alloy. MD simulation including model creation and analysis method is given in Section \ref{section:method}, Results and discussion are in Section \ref{section:RD}.
+Poor ductility of Ti-Al alloy  at room temperature strongly affects the safety of structures like turbo of aircraft engine and combustion generator \cite{Munz2017}. 
+
+Deformation phenomena of Ti-Al alloys have been widely studied in order to overcome the problems associated with the limited ductility and damage tolerance.  Much of the work has been performed on single phase $\gamma$-TiAl alloys and polysynthetically twinned crystals(PTC)\cite{Appel2016}. Rapture failure at the macroscopic scale can be attributed to abrupt nucleation, growth and propagation of cracks, but at the microscopic scale defects are initially formed in the casting process, such as voids and inclusions \cite{Tang2014}.Mess research  cover a wide range of factors such as alloy composition, microstructure and deformation temperature, some reports come up with the idea that two phase titanium aluminum alloys with proper phase distribution and grain size exhibit better mechanical performance compared with monolithic constituents $\gamma$(TiAl) and $\alpha_2$($\rm Ti_3Al$) alloy \cite{Kim1995}. 
+void can be arose due to specific volume differences induced by precipitation, different thermal expansion or shrinkage upon heating or cooling the specimen. It has been known that nucleation, growth and coalescence of voids are deemed as the primary mechanism of ductile material fracture, in which void growth is particularly important \cite{Hempel2017a}. The initiation of crack at microscopic scale is a dynamic process, which results in difficulties on study of  mechanism about deformation and cracking, these defects are known playing a fundamental role in the deformation of materials. Multiscale method has been applied to study deformation behavior of polycrystal with single aluminum \cite{Groh2009} and titanium element respectively \cite{Liu2018}. It's necessary to carefully examine the revolution of defects and its influence on the fracture process at atomic scale. 
+
+The effect of void is another great concern about properties and deformation mechanism  of TiAl alloy.  Therefore, it is necessary to study the deformation response of intermetallics structural materials with the consideration of microstructure evolution. Previous study on void growth in single crystal $\gamma$-TiAl reveals that void with high volume fraction detracts yield strength \cite{Tang2014, Xu2011}. Evolution of void in ductile polycrystalline was studied in nanoscale with molecular dynamics(MD) simulations, \cite{Jing2018a,Elkhateeb2018}, voids inside material are sources of dislocation and affects the properties of materials differently because of differences in size and position.  The deformation and fracture mechanisms in the duplex microstructure are plasticity induced grain boundary decohesion and cleavage, while those in the lamellar micro-structure are interface delamination and cracking across the lamellar \cite{Tang2014}. It reveals that existence of voids alone may contribute to strain hardening because they are barriers to dislocation movement in ductile fcc structure metal\cite{Xiong2015}. However, few literature covers about deformation mechanism of two phase Ti-Al alloy and the role of void in atomic scale. Defects are inevitable as micro-pores and loosen from casting, and in the actual work environment with radiation. A lot of work carried out on the  effect of various defects on the behavior of different materials, showing that point defects may affect the properties of materials greatly. The mechanical performance of irradiated copper is affected by the interaction between irradiation and dislocation \cite{Kiener2011}. Vacancy concentration in single crystal and polycrystal Fe–40 at. Al bulk results in an increase of strength \cite{Yang1998}. Ti-Al alloy is a type of typical brittle material, thus it can be assumed that its properties are sensitive to the existence of void. Surface defects such as small notches can cause low and high cycle fatigue strength of the Ti–47Al–2W–0.5Si alloy \cite{Nazmy2001}, and the strength of single crystal $\gamma$-TiAl is also lowered by point defect \cite{Wu2016}. The resistance of Ti–6Al–4V alloy, which was processed for typical fan blade applications, to high-cycle fatigue in the presence of foreign- object damage was reduced due to earlier crack initiation.  The nucleation and subsequent near-threshold growth of crack was primarily affected by the stress concentration associated with the foreign-object damage and the presence of small cracks in the damaged zone. Due to difficulties in observing the dynamic process during deformation wit experiments, MD simulation has become an effective method to investigate micro deformation mechanism. Defects such as grain boundary, void and segregation play significant roles in the process of fracture \cite{Larsen2016}. This paper focus on the evolution of microstructure, tending to find out its connection to cold deformation behavior of two phase TiAl alloy. MD simulation including model creation and analysis method is given in Section \ref{section:method}, Results and discussion are in Section \ref{section:RD}.
 
 \section{Molecular Dynamics Simulation }\label{section:method}
 \subsection{Atomic Potential}
@@ -99,7 +103,7 @@ where $E_{total}$ is the total energy of the system, $\rho_{h,i}$, is the host e
 Two phase Ti-Al alloy is composed of $\gamma $-TiAl and $\alpha_2$-$\rm Ti_3Al$ has a fcc type cell with an $L1_0$ structure, and $\alpha_2$-$\rm Ti_3Al$ has a hcp structure, these two types of initial cells are shown in Fig. \ref{fig:tial-cell}, constructing parameters of the two type of unit cell are given by table \ref{tab:lattice_parameter}. Periodic boundary conditions (PBC) are applied along three directions, which makes polycrystal with periodic nanovoid structures. The initial dimension of simulation cell is $L_x =200$ \si{\angstrom}, $L_y = $180\si{\angstrom}, $L_z = 210$ \si{\angstrom}, and each model contains about 460,000 atoms. The model contains 6 grains, with random shape and orientation were created with Voronoi method. Uniaxial load was applied to the model at a strain rate of $5\times10^8\ \rm{s}^{-1}$. 
 % In order to study the deformation mechanism of the two phase alloy and the effect of void, three types of models were created: Type-1.model without any void; Type-2. models with different size void inside $\alpha_2$ phase; Type-3. models with void at $\alpha_2-\gamma$ interface. \ref{tab:lattice_parameter}. The simulation cells of two phase polycrystalline with an initially spherical void at different position are shown in figure .
 \subsection{Analysis method}
-In order to identify typical defects in the deformed model, a hybrid analysis method was used with free code ovito\cite{Stukowski2010a}.Dislocation is visualized by DXA method, and centro-symmetry parameter(CSP) is used to deffer grain boundaries from  $\alpha_2$ phase and $\gamma$ phase. The definition of CSP is as following:
+In order to identify typical defects in the deformed model, a hybrid analysis method was used with free code ovito\cite{Stukowski2010a}.Dislocation is visualized by DXA method, and centro-symmetry parameter(CSP) is used to differ grain boundaries from  $\alpha_2$ phase and $\gamma$ phase. The definition of CSP is as following:
 
 	\begin{equation} \label{eq:csp} 
 	P = \displaystyle\sum_{i=1}^{6}|\vec{R_i}+{\vec{R}}_{i+6}|^2
@@ -191,7 +195,7 @@ Interaction between dislocations with Burgers vector of $1/6 [112] $ and $ 1/6 [
 \begin{equation}\label{eq:dis-3}
 1/6 [\ 1\ 1\ 2\ ] + 1/6 [\ 1\ 1\  \overline{2}\ ] \to 1/3 [\ 1\ 1\ 0\ ]
 \end{equation}
-According to the  results calculated by first principle, the stacking fault energy of TiAl is much smaller than $\rm{Ti_3Al}$, as a consequence, calculated shear strength of TiAl and $\rm{Ti_3Al}$is 4.1 Gpa and 2.86 Gpa along their easy slip plane respectively\cite{Liu2007}. This calculation reveals that tensile behaviour in single crystal is mainly controlled by the type of the structure. However, in two phase Ti-Al alloy, deformation of $\alpha_2$ phase is earlier than $\gamma$ phase during yield stage, thus local displacement of two phases are incompatible during yield stage.  Mobility of dislocation is affected by structure of crystal, loading condition and temperature. And $\alpha_2$ phase is made up of hcp  structured grain, grains with this type of structure possess less slip system compared with grain with fcc structure \cite{Zhu2012}, thus $\alpha_2$ phase is difficult do deform under uniaxial tensile loading. 
+According to the  results calculated by first principle, the stacking fault energy of TiAl is much smaller than $\rm{Ti_3Al}$, as a consequence, calculated shear strength of TiAl and $\rm{Ti_3Al}$is 4.1 Gpa and 2.86 Gpa along their easy slip plane respectively\cite{Liu2007}. This calculation reveals that tensile behavior in single crystal is mainly controlled by the type of the structure. However, in two phase Ti-Al alloy, deformation of $\alpha_2$ phase is earlier than $\gamma$ phase during yield stage, thus local displacement of two phases are incompatible during yield stage.  Mobility of dislocation is affected by structure of crystal, loading condition and temperature. And $\alpha_2$ phase is made up of hcp  structured grain, grains with this type of structure possess less slip system compared with grain with fcc structure \cite{Zhu2012}, thus $\alpha_2$ phase is difficult do deform under uniaxial tensile loading. 
 
 Main reason for the unequal strain partitioning between the $\alpha_2$ and $\gamma$ phase is  the strong plastic anisotropy of  $\alpha_2$ phase. TEM examinations performed on tensile tested lamellar alloys have revealed that the limited plasticity of  $\alpha_2$ phase is carried by local slip of dislocations with the Burgers vector $1/3[11\overline{2}0]$ prism planes shown by Fig. \ref{fig:Defect}(b), which is by far the easiest slip system in $\alpha_2$ single crystals.  Dislocation neighboring interfaces often needs to be transformed. For example, an ordinary 1/2 [110] dislocation gliding in one $\gamma$ grain has to be converted into $[101]$ super dislocation when the double Burgers vectors gliding in an adjacent $\gamma$ grain. At the $\alpha_2/\gamma$ interface, dislocations existing in  $D0_{19}$ structure  transform into dislocations, which is consistent with the $\rm{L1_0}$ structure. These core transformations are associated with the change of the dislocation line energy because of the differences of the length and the shear module.  Pyramidal slip of the $\alpha_2$ phase is required  when slip is forced to cross $\alpha_2$ phase, this process needs an extremely high shear stress.
 
@@ -251,7 +255,7 @@ The role of void can be concluded as two main parts: source of dislocations and 
 	\caption{Orowan process occurred inside $\alpha_2$ phase grain (removed atoms with regular arrangement)}
 	\label{fig:orowan}
 \end{figure}
-Void inside $\alpha_2$ phase induced considerable misfit-stress fields and thus can influence material properties pronouncedly. Such stress fields surrounding the second-phase particles can be due to misfit between $\alpha_2$ phase atoms and surface atoms surounding the void. That's a possibly favorable effect of second-phase particles that void contribution to the enhancement of mechanical strength. The strengthening effect of the particle inside single phase TiAl alloy has been verified by experiment \cite{Zghal1998}. Considering yielding of a material as related to glide of dislocations, any mechanism obstructing dislocation glide improves the mechanical strength. The defect evolution neighboring the void during yield stage is shown in Fig. \ref{fig:orowan}(a), the role of void is similar to second-phase particles. It servers as obstacles for dislocation migration which is shown by Fig. \ref{fig:orowan}(b): the stress fields surrounding the second-phase particles block migrating dislocation, the void particle acts as pinning point. The dislocation can pass two pinning points under shear  stress , and the critic value depends on the distance between  obstacles, it is be given by \cite{Xiong2015}:
+Void inside $\alpha_2$ phase induced considerable misfit-stress fields and thus can influence material properties. Such stress fields surrounding the second-phase particles can be due to misfit between $\alpha_2$ phase atoms and surface atoms surrounding the void. That's a possibly favorable effect of second-phase particles that void contribution to the enhancement of mechanical strength. The strengthening effect of the particle inside single phase TiAl alloy has been verified by experiment \cite{Zghal1998}. Considering yielding of a material as related to glide of dislocations, any mechanism obstructing dislocation glide improves the mechanical strength. The defect evolution neighboring the void during yield stage is shown in Fig. \ref{fig:orowan}(a), the role of void is similar to second-phase particles. It servers as obstacles for dislocation migration which is shown by Fig. \ref{fig:orowan}(b): the stress fields surrounding the second-phase particles block migrating dislocation, the void particle acts as pinning point. The dislocation can pass two pinning points under shear  stress , and the critic value depends on the distance between  obstacles, it is be given by \cite{Xiong2015}:
 \begin{equation} \label{eq:orowan} 
 \tau_0 = Gb/d
 \end{equation}
@@ -260,18 +264,18 @@ where $d$ represents the distance between two obstacles A and B in Fig. \ref{fig
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=1\linewidth]{"img/void-gb"}
-	\caption{(a) Fracture mode of two types of model  (b)Evolution of void at $\alpha_2 / \gamma$ phase boundary}
+	\caption{(a) Fracture mode of two types of mode,  (b)Evolution of void at $\alpha_2 / \gamma$ phase boundary}
 	\label{fig:void-gb}
 \end{figure}
 Effect of voids at different positions on the crack mode of the material are shown by Fig. \ref{fig:void-gb}(a). The model with void fractured cross the grain, and the model with void at $\alpha_2 / \gamma$ boundary resulted a large crack along the boundary under tensile loading. The difference of crack mode can attribute to the position of void and the evolution of the defect. Nucleation, emission of Shockley partial dislocation affect the evolution of the void at boundary greatly due to the anisotropy of two phases on the both sides of the phase boundary. The void weaken the strength of the grain it locates,  $\alpha_2$ phase grain is easy to deformed under shear stress, thus that caused the crack initiated inside grain and finally caused fracture across the grain. Deformation mechanism of the model with void at boundary can be  more complex due to the interaction between void and phase boundary. In elastic stage, the system composed of $\alpha_2$ phase, $\gamma$ phase and void is in equilibrium, internal stress are balanced under compatible deformation as is shown by the first subfigure of Fig. \ref{fig:void-gb}(b). In the middle moment of yield stage, partial dislocation with Burgers vector $1/6[\overline{2}\ \overline{1}\ 1]$ emitted from surface of void in Fig. \ref{fig:void-gb}(b)-2. The micro crack initialed from the zone neighbor  the interface between void and boundary, that quickly caused abrupt decohension of phase boundary. That accounts for the reason that material with void at $\alpha_2 / \gamma$ phase boundary is weaker than other cases. 
-\section{conclusion}
+\section{Conclusion}
 In this paper, deformation behavior of two phase Ti-Al alloy under tensile loading was simulated with MD method. The mechanism of deformation was investigated under atomic scale, and the effect of void on the properties of two phase Ti-Al alloy was also studied.  The conclusions are as follows:\\
 (1) Major deformation component of the two phase TiAl alloy is $\gamma$ phase,$\alpha_2$ phase is harder to be deformed, this inhomogeneity results in cracks at interface of the two phase. \\
-(2) Effect of  void on the strength of the two phase alloy is sensitive to the location of  void. Void inside grain hasss detraction to the strength of material because the engthening mechanism similar to second phase particle. Void at $\alpha_2 / \gamma$ boundary is most risky situation for two phase alloy because of fast fracture along boundary.
+(2) Effect of  void on the strength of the two phase alloy is sensitive to the location of  void. Void inside grain has detraction to the strength of material because the strengthening mechanism similar to second phase particle. Void at $\alpha_2 / \gamma$ boundary is most risky situation for two phase alloy because of fast fracture along boundary.
 
 \reftitle{References}
 \bibliography{ref/VIOLET-ref.bib}
-\funding{This research was funded by the National Natural Science Foundation of China (No. 51665030) and the Program for Changjiang Scholars and Innovative Research Team in Universities of the Ministry of Education of China (No. IRT-15R30), the Hongliu First-class  Disciplines Development Program of Lanzhou University of Technology, and the Doctoral Research Foundation of Lanzhou University of Technology.}
+\funding{This research was funded by the National Natural Science Foundation of China (No.51665030, No.51865027) and the Program for Changjiang Scholars and Innovative Research Team in Universities of the Ministry of Education of China (No. IRT-15R30), the Hongliu First-class  Disciplines Development Program of Lanzhou University of Technology, and the Doctoral Research Foundation of Lanzhou University of Technology.}
 
 \end{document}
 
