--- a/draft/alexpub.tex
+++ b/draft/alexpub.tex
@@ -23,21 +23,21 @@
 \newcommand{\orcidauthorB}{0000-0002-9582-6301} % Add \orcidB{} behind the author's name
 
 % Authors, for the paper (add full first names)
-\Author{Author \orcidA{}}
-%\Author{Ruicheng Feng $^{1,2}$\orcidA{}, Maomao Wang $^{1}$\orcidB{}}
+%\Author{Author \orcidA{}}
+\Author{Ruicheng Feng$^{1,2}$\orcidA{}; Maomao Wang $^{1,*}$\orcidB{}; Haiyan Li$^{1,*}$; Yongnian Qi$^{1}$; Qi Wang$^{1}$; Zhiyuan Rui$^{1,2}$}
 
 % Authors, for metadata in PDF
-%\AuthorNames{Maomao Wang $^{1,\dagger,\ddagger}$\orcidB{}, Firstname Lastname and Firstname Lastname}
-
+%\AuthorNames{ }
+% frcly@163.com(R.F.);15620864891@163.com(M.W.); y5217@163.com(H.L.);13893591491@163.com(Y.Q.);18350122524@163.com(Q.W);zhiy_rui@163.com(Z.R)
 % Affiliations / Addresses (Add [1] after \address if there is only one affiliation.)
 \address{%
-% $^{1}$ \quad School of Mechanical and Electronical Engineering, Lanzhou University of Technology, Lanzhou 730050, China; frcly@163.com (R.F.); 15620864891@163.com (M.W.)\\
-$^{1}$ \quad School of Mechanical and Electronical Engineering, Lanzhou University of Technology, Lanzhou 730050, China;\\
+%$^{1}$ \quad School of Mechanical and Electronical Engineering, Lanzhou University of Technology, Lanzhou 730050, China; frcly@163.com (R.F.); 15620864891@163.com (M.W.)\\
+$^{1}$ \quad School of Mechanical and Electronical Engineering, Lanzhou University of Technology, Lanzhou 730050, China; frcly@163.com(R.F.); 15620864891@163.com(M.W.); y5217@163.com(H.L.); 13893591491@163.com(Y.Q.); 18350122524@163.com(Q.W); zhiy\underline{ \ }rui@163.com(Z.R.)\\
 % $^{2}$ \quad Key Laboratory of Digital Manufacturing Technology and Application, Ministry of Education, Lanzhou University of Technology, Lanzhou 730050, China
 %*; e-mail@e-mail.com}
 $^{2}$ \quad State Key Laboratory of Advanced Processing and Recycling of Non-ferrous Metals, Lanzhou University of Technology, Lanzhou 730050, China}
 % Contact information of the corresponding author
-\corres{Correspondence: e-mail@e-mail.com; Tel.: +x-xxx-xxx-xxxx}
+\corres{Correspondence: 15620864891@163.com; y5217@163.com}
 
 % Current address and/or shared authorship
 %\firstnote{Current address: Affiliation 3} 
@@ -179,7 +179,7 @@ where the prefactor $v_0$ gives the velocity that would be obtained for each pot
 	\end{minipage}
 \end{figure}
 
-Length of different types of dislocations are given at four stages in Fig. \ref{fig:disum}. Dislocations are recognized and identified using the dislocation analysis (DXA) of ovito. The length of Shorckley dislocation with Burgers vector $1/6[1 1 2]$ increased sharply during yield stage of the deformation process in Fig. \ref{fig:disum}, but the length of perfect dislocation fluctuated at a low level. Perfect  dislocations split into Shockley partial dislocations, this decomposition process  can be given by formulation (\ref{eq:dis-1}) and (\ref{eq:dis-2}). The structure spontaneously transformed into intrinsic stacking fault (ISF), which can be observed in Fig. \ref{fig:Defect}(a). 
+Length of different types of dislocations are given at four stages in Fig. \ref{fig:disum}. Dislocations are recognized and identified using the dislocation analysis (DXA) of ovito. The length of Shockley dislocation with Burgers vector $1/6[1 1 2]$ increased sharply during yield stage of the deformation process in Fig. \ref{fig:disum}, but the length of perfect dislocation fluctuated at a low level. Perfect  dislocations split into Shockley partial dislocations, this decomposition process  can be given by formulation (\ref{eq:dis-1}) and (\ref{eq:dis-2}). The structure spontaneously transformed into intrinsic stacking fault (ISF), which can be observed in Fig. \ref{fig:Defect}(a). 
 
 %\begin{equation}\label{eq:dis-1}
 %[\ 0\ 1\ \overline{1}\ ] \to 1/2 [\ 1\ 1\ \overline{2}\ ]+1/2[\ \overline{1}\ 1\ 0\ ]\\
@@ -275,7 +275,7 @@ In this paper, deformation behavior of two phase Ti-Al alloy under tensile loadi
 
 \reftitle{References}
 \bibliography{ref/VIOLET-ref.bib}
-\funding{This research was funded by the National Natural Science Foundation of China (No.51665030, No.51865027) and the Program for Changjiang Scholars and Innovative Research Team in Universities of the Ministry of Education of China (No. IRT-15R30), the Hongliu First-class  Disciplines Development Program of Lanzhou University of Technology, and the Doctoral Research Foundation of Lanzhou University of Technology.}
+\funding{This research was funded by the National Natural Science Foundation of China (No.51665030, No.51865027) and the Program for Changjiang Scholars and Innovative Research Team in Universities of the Ministry of Education of China (No. IRT-15R30), the Hongliu First-class  Disciplines Development Program of Lanzhou University of Technology.}
 
 \end{document}
 
